[#36]: modify getToughenBatchByStatus and and mark as complete api