@@ -1,9 +1,11 @@
 package com.sowermate.tenantService.services.impl;
 
-import com.sowermate.tenantService.entities.*;
+import com.sowermate.tenantService.entities.ProFormaInvoiceItemEntity;
+import com.sowermate.tenantService.entities.ToughenBatchProcessDetailsEntity;
+import com.sowermate.tenantService.entities.ToughenBatchProcessEntity;
+import com.sowermate.tenantService.entities.minimal.ToughenBatchProcessProjection;
 import com.sowermate.tenantService.entities.value.GeneralParamValue;
 import com.sowermate.tenantService.entities.value.ToughenBatchProcessValue;
-import com.sowermate.tenantService.enums.ProformaInvoiceStatusEnum;
 import com.sowermate.tenantService.enums.ToughenBatchProcessStatusEnum;
 import com.sowermate.tenantService.repositories.*;
 import com.sowermate.tenantService.services.ToughenBatchProcessService;
@@ -13,7 +15,9 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.ObjectUtils;
 
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -40,64 +44,72 @@ public class ToughenBatchProcessServiceImpl implements ToughenBatchProcessServic
     @Override
     @Transactional
     public void toughenBatchProcessItemAdd(GeneralParamValue generalParamValue) {
-        Optional<List<ToughenBatchProcessEntity>>  batchListInProgress = toughenBatchProcessRepository.findByStatusOrderByCreatedDateTimeDesc(ToughenBatchProcessStatusEnum.IN_PROGRESS);
+        Optional<List<ToughenBatchProcessEntity>> batchListInProgress = toughenBatchProcessRepository.findByStatusOrderByCreatedDateTimeDesc(ToughenBatchProcessStatusEnum.IN_PROGRESS);
         ToughenBatchProcessDetailsEntity toughenBatchProcessDetailsEntity = createToughenBatchProcessDetailsEntity(generalParamValue);
         //deduct item from toughen item
         deductItemFromToughenItem(generalParamValue);
 
-        if(!ObjectUtils.isEmpty(batchListInProgress.get())) {
-           ToughenBatchProcessEntity toughenBatchProcessEntity = batchListInProgress.get().get(0);
-           toughenBatchProcessDetailsEntity = toughenBatchProcessDetailsEntity.toBuilder().toughenBatchProcessEntity(toughenBatchProcessEntity).build();
-           toughenBatchProcessEntity.getToughenBatchProcessDetailsEntities().add(toughenBatchProcessDetailsEntity);
-           toughenBatchProcessRepository.saveAndFlush(toughenBatchProcessEntity).toDTO();
-       } else {
-           //
-           Optional<ToughenBatchProcessEntity> batchListRecentRecord = toughenBatchProcessRepository.findFirstByCompanyEntityUuidOrderByCreatedDateTimeDesc(generalParamValue.getCompanyUuid());
+        if (!ObjectUtils.isEmpty(batchListInProgress.get())) {
+            ToughenBatchProcessEntity toughenBatchProcessEntity = batchListInProgress.get().get(0);
+            toughenBatchProcessDetailsEntity = toughenBatchProcessDetailsEntity.toBuilder().toughenBatchProcessEntity(toughenBatchProcessEntity).build();
+            toughenBatchProcessEntity.getToughenBatchProcessDetailsEntities().add(toughenBatchProcessDetailsEntity);
+            toughenBatchProcessRepository.saveAndFlush(toughenBatchProcessEntity).toDTO();
+        } else {
+            //
+            Optional<ToughenBatchProcessEntity> batchListRecentRecord = toughenBatchProcessRepository.findFirstByCompanyEntityUuidOrderByCreatedDateTimeDesc(generalParamValue.getCompanyUuid());
 
-           ToughenBatchProcessEntity toughenBatchProcessEntity;
-           if(batchListRecentRecord.isPresent() && !ObjectUtils.isEmpty(batchListRecentRecord.get())) {
-               ToughenBatchProcessEntity dbEntity = batchListRecentRecord.get();
-               LocalDateTime createdDateTime = dbEntity.getCreatedDateTime();
-               if(createdDateTime.getDayOfMonth() == LocalDateTime.now().getDayOfMonth()) {
-                   toughenBatchProcessEntity = createToughenBatchProcessEntity(generalParamValue, dbEntity.getBatchNo() + 1);
-               } else {
-                   toughenBatchProcessEntity = createToughenBatchProcessEntity(generalParamValue, 1);
-               }
-           }  else {
-               //empty records
-               toughenBatchProcessEntity = createToughenBatchProcessEntity(generalParamValue, 1);
-           }
+            ToughenBatchProcessEntity toughenBatchProcessEntity;
+            if (batchListRecentRecord.isPresent() && !ObjectUtils.isEmpty(batchListRecentRecord.get())) {
+                ToughenBatchProcessEntity dbEntity = batchListRecentRecord.get();
+                LocalDateTime createdDateTime = dbEntity.getCreatedDateTime();
+                if (createdDateTime.getDayOfMonth() == LocalDateTime.now().getDayOfMonth()) {
+                    toughenBatchProcessEntity = createToughenBatchProcessEntity(generalParamValue, dbEntity.getBatchNo() + 1);
+                } else {
+                    toughenBatchProcessEntity = createToughenBatchProcessEntity(generalParamValue, 1);
+                }
+            } else {
+                //empty records
+                toughenBatchProcessEntity = createToughenBatchProcessEntity(generalParamValue, 1);
+            }
 
-           toughenBatchProcessEntity = toughenBatchProcessEntity.toBuilder().toughenBatchProcessDetailsEntities(List.of(toughenBatchProcessDetailsEntity)).build();
-           toughenBatchProcessRepository.saveAndFlush(toughenBatchProcessEntity);
-       }
+            toughenBatchProcessEntity = toughenBatchProcessEntity.toBuilder().toughenBatchProcessDetailsEntities(List.of(toughenBatchProcessDetailsEntity)).build();
+            toughenBatchProcessRepository.saveAndFlush(toughenBatchProcessEntity);
+        }
     }
 
     @Override
     public List<ToughenBatchProcessValue> toughenBatchProcessItemCancel(String tenantUuid, String uuid) {
         proFormaInvoiceItemService.toughenBatchProcess(tenantUuid, uuid, true);
-        Optional<List<ToughenBatchProcessEntity>>  batchListInProgress =  toughenBatchProcessRepository.findByStatusOrderByCreatedDateTimeDesc(ToughenBatchProcessStatusEnum.IN_PROGRESS);
-        return batchListInProgress.get().stream().map(e->e.toDTO()).collect(Collectors.toList());
+        Optional<List<ToughenBatchProcessEntity>> batchListInProgress = toughenBatchProcessRepository.findByStatusOrderByCreatedDateTimeDesc(ToughenBatchProcessStatusEnum.IN_PROGRESS);
+        return batchListInProgress.get().stream().map(e -> e.toDTO()).collect(Collectors.toList());
     }
 
     @Override
     public List<ToughenBatchProcessValue> markToughenBatchProcessComplete(GeneralParamValue generalParamValue) {
-        Optional<List<ToughenBatchProcessEntity>>  batchListInProgress = toughenBatchProcessRepository.findByStatusOrderByCreatedDateTimeDesc(ToughenBatchProcessStatusEnum.IN_PROGRESS);
-        List<ToughenBatchProcessEntity> toBeUpdated = batchListInProgress.get().stream().map(e->{
-             e.setStatus(ToughenBatchProcessStatusEnum.COMPLETED);
-             return e;
-         }).collect(Collectors.toList());
+        Optional<List<ToughenBatchProcessEntity>> batchListInProgress = toughenBatchProcessRepository.findByBatchNoAndCompanyUuidAndStatus(generalParamValue.getBatchNo(), generalParamValue.getCompanyUuid(), ToughenBatchProcessStatusEnum.IN_PROGRESS);
+        List<ToughenBatchProcessEntity> toBeUpdated = batchListInProgress.get().stream().map(e -> {
+            e.setStatus(ToughenBatchProcessStatusEnum.COMPLETED);
+            Optional<List<ProFormaInvoiceItemEntity>> proFormaInvoiceItemEntityList = toughenBatchProcessRepository.findByBatchNo(e.getId());
+            List<ProFormaInvoiceItemEntity> toBeUpdatedPiItem = proFormaInvoiceItemEntityList.get().stream().map(pi -> {
+                pi.setToughenCompleted(pi.getToughenCompleted() + 1);
+                pi.setDispatchBucket(pi.getDispatchBucket() + 1);
+                return pi;
+            }).toList();
+            return e;
+        }).collect(Collectors.toList());
         toughenBatchProcessRepository.saveAllAndFlush(toBeUpdated);
+
         //TODO optimize this logic
-        Optional<List<ToughenBatchProcessEntity>>  latestBatchListInProgress =  toughenBatchProcessRepository.findByStatusOrderByCreatedDateTimeDesc(ToughenBatchProcessStatusEnum.IN_PROGRESS);
-        return latestBatchListInProgress.get().stream().map(e->e.toDTO()).collect(Collectors.toList());
+        Optional<List<ToughenBatchProcessEntity>> latestBatchListInProgress = toughenBatchProcessRepository.findByStatusOrderByCreatedDateTimeDesc(ToughenBatchProcessStatusEnum.IN_PROGRESS);
+        return latestBatchListInProgress.get().stream().map(e -> e.toDTO()).collect(Collectors.toList());
     }
 
     @Override
-    public List<ToughenBatchProcessValue> getToughenBatchProcessByStatus(ToughenBatchProcessStatusEnum toughenBatchProcessStatusEnum) {
-        Optional<List<ToughenBatchProcessEntity>>  list = toughenBatchProcessRepository.findByStatusOrderByCreatedDateTimeDesc(toughenBatchProcessStatusEnum);
-        if(list.isPresent()) {
-            return list.get().stream().map(ToughenBatchProcessEntity::toDTO).collect(Collectors.toList());
+    public List<ToughenBatchProcessProjection> getToughenBatchProcessByStatus(String
+                                                                                      companyUuid, ToughenBatchProcessStatusEnum toughenBatchProcessStatusEnum) {
+        List<ToughenBatchProcessProjection> list = toughenBatchProcessRepository.findByCompanyUuidAndStatus(companyUuid, toughenBatchProcessStatusEnum);
+        if (!list.isEmpty()) {
+            return list;
         }
         return new ArrayList<>();
     }
@@ -109,7 +121,8 @@ public class ToughenBatchProcessServiceImpl implements ToughenBatchProcessServic
         proFormaInvoiceItemRepository.saveAndFlush(updatedProFormaInvoiceItemEntity);
     }
 
-    public ToughenBatchProcessDetailsEntity createToughenBatchProcessDetailsEntity(GeneralParamValue generalParamValue) {
+    public ToughenBatchProcessDetailsEntity createToughenBatchProcessDetailsEntity(GeneralParamValue
+                                                                                           generalParamValue) {
         return ToughenBatchProcessDetailsEntity.newBuilder()
                 .proFormaInvoiceEntity(proFormaInvoiceRepository.findByUuid(generalParamValue.getPiUuid()))
                 .workOrderEntity(workOrderRepository.findByUuid(generalParamValue.getWorkOrderUuid()))
@@ -119,7 +132,8 @@ public class ToughenBatchProcessServiceImpl implements ToughenBatchProcessServic
                 .build();
     }
 
-    public ToughenBatchProcessEntity createToughenBatchProcessEntity(GeneralParamValue generalParamValue, Integer batchNO) {
+    public ToughenBatchProcessEntity createToughenBatchProcessEntity(GeneralParamValue generalParamValue, Integer
+            batchNO) {
         return ToughenBatchProcessEntity.newBuilder()
                 .tenantEntity(tenantRepository.findByUuid(generalParamValue.getTenantUuid()))
                 .companyEntity(companyRepository.findByTenantEntity_UuidAndCompanyEntityUuid(generalParamValue.getTenantUuid(), generalParamValue.getCompanyUuid()))
